<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyRun</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Female">Female</string>
    <string name="Male">Male</string>
    <string name="Profile_Picture">Profile Picture</string>
    <string name="Change">Change</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="Name">Name:</string>
    <string name="Email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="gender">Gender:</string>
    <string name="class_name">Class:</string>
    <string name="major">Major:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="start">Start</string>
    <string name="sync">Sync</string>
    <string name="inputType">Input Type</string>
    <string name="activityType">Activity Type</string>

    <string name="activityExample">Activity Example: Running,13.00.00, 01/01/2015, 5 miles</string>


    <!-- Change this to whatever the course website will be -->
    <string name="profile_photo_file_name">profile_photo.png</string>
    <string name="dialog_fragment_tag_photo_picker">dialog_fragment_photo_picker</string>
    <string name="ui_profile_toast_save_text">Profile saved</string>
    <string name="ui_profile_toast_cancel_text">Change canceled</string>
    <string name="ui_button_save_title">Save</string>
    <string name="ui_button_change_title">SnapNow</string>
    <string name="ui_settings_profile_title">User Profile</string>
    <string name="ui_settings_profile_summary">Names, Email, Class, etc</string>
    <string name="ui_profile_photo_title">Profile photo:</string>
    <string name="ui_profile_photo_content_description">Your profile photo:</string>
    <string name="ui_profile_photo_picker_title">"Select profile image"</string>

    <string-array name="ui_profile_photo_picker_items">
        <item>Take picture from camera</item>
        <item>Select from Gallery</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="accountPreferences">Account Preferences</string>
    <string name="title_userProfile">User Profile</string>
    <string name="summary_userProfile">Names, E-mail, Class, etc.</string>
    <string name="title_privacy">Privacy Setting</string>
    <string name="summary_privacy">Posting Your Records Anonymously</string>
    <string name="additionalPreferences">Additional Preferences</string>
    <string name="title_unitPref">Unit Preference</string>
    <string name="summary_unitPref">Select the units in which you would like to see distance values
    </string>
    <string name="title_comment">Comment</string>
    <string name="summary_comment">Any suggestions for this course?</string>

    <string name="misc">Misc</string>
    <string name="title_web">Class Homepage</string>
    <string name="summary_web">Web page for CS 480 - Mobile Application Development</string>




    <array name="unitPreferences">
        <item>Miles</item>
        <item>Kilometers</item>

    </array>

    <array name="entryvalues_unitPreferences">
        <item>Miles</item>
        <item>Kilometers</item>
    </array>



</resources>
